flux-modules/loki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/audit-version: latest
